@@ -9,12 +9,21 @@
 // TODO: should get rid of these include and just make io_poller's
 // poller_data opaque!  That would also fix the huge disparity between
 // epoll/kqueue's tiny poller_data, and poll/select's huge poller_data.
+// Each poller would just get a few void*s or something, and would have
+// malloc its own data.
 
 // TODO: should use a single, static function table for each poller.
 // The poller data structure should be a pointer to the static table
-// of functions and a void* or int.
+// of functions and a void* or int.  (true?  isn't this method faster,
+// especially on multiprocessor systems that have to synch cache lines?)
 
 // TODO: try to use preprocessor to decide what pollers are even compilable.
+
+
+#include "atom.h"
+#include "socket.h"
+
+
 #if !(defined(USE_SELECT) || defined(USE_POLL) || defined(USE_EPOLL))
 #define USE_SELECT
 #define USE_MOCK
@@ -61,7 +70,12 @@ struct poller_funcs {
 	int (*remove)(struct io_poller *poller, io_atom *atom);	
 	int (*set)(struct io_poller *poller, io_atom *atom, int flags);
 	int (*wait)(struct io_poller *poller, unsigned int timeout);
-	void (*dispatch)(struct io_poller *poller);
+	int (*dispatch)(struct io_poller *poller);
+	int (*read)(struct io_poller *poller, struct io_atom *io, char *buf, size_t cnt, size_t *readlen);
+	int (*write)(struct io_poller *poller, struct io_atom *io, const char *buf, size_t cnt, size_t *wrlen);
+	int (*connect)(struct io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, socket_addr remote, int flags);
+	int (*accept)(struct io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, int flags, io_atom *listener, socket_addr *remote);
+	int (*listen)(struct io_poller *poller, io_atom *io, io_proc read_proc, socket_addr local);
 };
 
 
@@ -101,5 +115,9 @@ int io_poller_init(io_poller *poller, poller_type type);
 #define io_set(a,b,c)		(*(a)->funcs.set)((io_poller*)&(a)->poller_data,b,c)
 #define io_wait(a,b)		(*(a)->funcs.wait)((io_poller*)&(a)->poller_data,b)
 #define io_dispatch(a)		(*(a)->funcs.dispatch)(a)
-
+#define io_read(a,io,buf,cnt,rdlen)   (*(a)->funcs.read)(a,io,buf,cnt,rdlen)
+#define io_write(a,io,buf,cnt,wrlen)  (*(a)->funcs.write)(a,io,buf,cnt,wrlen)
+#define io_connect(a,io,rp,wp,ra,f)   (*(a)->funcs.connect)(a,io,rp,wp,ra,f)
+#define io_accept(a,io,rp,wp,f,l,r)   (*(a)->funcs.accept)(a,io,rp,wp,f,l,r)
+#define io_listen(a,io,rp,l)          (*(a)->funcs.listen)(a,io,rp,l)
 
