@@ -6,7 +6,8 @@
 
 #include <netinet/in.h>
 #include <arpa/inet.h>
-#include "poller.h"
+
+struct io_poller;
 
 
 struct socket_addr {
@@ -35,15 +36,7 @@ typedef struct socket_addr socket_addr;
  * do we?
  */
 
-int io_socket_connect(io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, socket_addr remote, int flags);
-
-
-/** Just a lower-level version of io_socket_connect.  Returns the fd
- *  instead of the fully-prepared atom.  You then need to call io_atom_init
- *  and io_add yourself.
- */
-
-int io_socket_connect_fd(socket_addr remote);
+int io_socket_connect(struct io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, socket_addr remote, int flags);
 
 
 /** Accepts an incoming connection.
@@ -58,7 +51,7 @@ int io_socket_connect_fd(socket_addr remote);
  *                 system.  Pass NULL if you don't care.
  */
 
-int io_socket_accept(io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, int flags, io_atom *listener, socket_addr *remote);
+int io_socket_accept(struct io_poller *poller, io_atom *io, io_proc read_proc, io_proc write_proc, int flags, io_atom *listener, socket_addr *remote);
 
 
 /** Sets up a socket to listen for incoming connections.
@@ -72,9 +65,7 @@ int io_socket_accept(io_poller *poller, io_atom *io, io_proc read_proc, io_proc 
  * 		to get the
  */
 
-int io_socket_listen(io_poller *poller, io_atom *io, io_proc accept_proc, socket_addr local);
-
-
+int io_socket_listen(struct io_poller *poller, io_atom *io, io_proc accept_proc, socket_addr local);
 
 
 /** Parses a string to an address suitable for use with io_socket.
@@ -99,5 +90,5 @@ int io_socket_listen(io_poller *poller, io_atom *io, io_proc accept_proc, socket
  *  	}
  */
 
-char* io_socket_parse(const char *spec, socket_addr *sock);
+char* io_parse_address(const char *spec, socket_addr *sock);
 
